# payment_tracking_agent

./: .env.docker.example  .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/demo-inbox/processed/ccd/: ACH_CCD_20_Transactions_Syntax_Er.corrections.json  ACH_CCD_20_Transactions_Syntax_Er.txt
backend/src/payment_tracking_agent/: __init__.py  config.py  main.py
backend/src/payment_tracking_agent/agents/: __init__.py  after_submission.py  ai_explanation.py  ai_risk.py  before_submission.py  llm_advisor.py  llm_fixer.py  orchestrator.py  return_file.py
backend/src/payment_tracking_agent/api/: demo_flow.py  routes.py
backend/src/payment_tracking_agent/ledger/: __init__.py  store.py
backend/src/payment_tracking_agent/models/: __init__.py  ai_explanation.py  ai_risk.py  demo_flow.py  ledger.py  payment.py  pre_submission.py  return_file.py  settlement.py  transaction_status.py  validation.py
backend/src/payment_tracking_agent/parsers/: __init__.py  ccd.py  nacha_return.py  return_file.py  scheme_reject.py  settlement.py
backend/src/payment_tracking_agent/risk/: engine.py
backend/src/payment_tracking_agent/scheduler/: __init__.py  scheduler.py
backend/tests/: test_ai_explanation.py  test_ai_risk.py  test_ccd_parser.py  test_demo_flow.py  test_local_demo_fixtures.py  test_payment_ledger.py  test_return_ledger_updates.py  test_risk_engine.py  test_settlement_scheme_reject.py  test_smoke.py
(+103 files in other folders)
