[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payment-tracking-agent"
version = "0.1.0"
description = "ACH payment flow tracking and intelligence agent backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "ACH Payment Tracking Team" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "anthropic>=0.34",
    "truststore>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
payment-tracking-agent = "payment_tracking_agent.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/payment_tracking_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
